--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
     </footer>
 
     <!-- Backdrop -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <!-- Modal window -->
       <div class="modal">
         <button class="modal-close-btn" type="button">
@@ -884,12 +884,5 @@
         </ul>
       </div>
     </div>
-   <script
-     defer
-     src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-     integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-     crossorigin="anonymous"
-   ></script>
-  <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
