--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                 height="24"
                 aria-label="icon person"
               >
-                <use href="./images/icons.svg#icon-person"></use>
+                <use href="./images/name.png"></use>
               </svg>
             </div>
           </div>
@@ -738,7 +738,7 @@
                 height="24"
                 aria-label="icon phone"
               >
-                <use href="./images/icons.svg#icon-phone"></use>
+                <use href="./images/phone.png"></use>
               </svg>
             </div>
           </div>
@@ -760,7 +760,7 @@
                 height="24"
                 aria-label="icon email"
               >
-                <use href="./images/icons.svg#icon-email"></use>
+                <use href="./images/email.png"></use>
               </svg>
             </div>
           </div>
