--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                 height="24"
                 aria-label="icon person"
               >
-                <use href="./images/name.png"></use>
+                <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
           </div>
@@ -734,11 +734,11 @@
               />
               <svg
                 class="review-form-input-icon"
-                width="18"
+                width="14"
                 height="24"
                 aria-label="icon phone"
               >
-                <use href="./images/phone.png"></use>
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
@@ -760,7 +760,7 @@
                 height="24"
                 aria-label="icon email"
               >
-                <use href="./images/email.png"></use>
+                <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
